--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "react-scripts": "3.3.1",
     "typeface-roboto": "0.0.75"
   },
+  "proxy": {
+    "localhost:8080"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
