--- a/package.json
+++ b/package.json
@@ -14,9 +14,7 @@
     "react-scripts": "3.3.1",
     "typeface-roboto": "0.0.75"
   },
-  "proxy": {
-    "localhost:8080"
-  },
+  "proxy": "localhost:8080",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
