--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-scripts": "3.4.1",
     "redux": "4.0.5",
     "redux-thunk": "2.3.0",
+    "styled-components": "5.1.0",
     "typeface-roboto": "0.0.75"
   },
   "proxy": "http://localhost:8080",
