--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
         "styled-components": "5.1.0",
         "typeface-roboto": "0.0.75"
     },
-    "proxy": "https://workout-app-se5910.herokuapp.com/",
+    "proxy": "http://localhost:8080",
     "scripts": {
         "start": "react-scripts start",
         "build": "react-scripts build",
